--- a/src/app/modules/cadastro/comerciante/cadastro-comerciante/cadastro-comerciante.component.html
+++ b/src/app/modules/cadastro/comerciante/cadastro-comerciante/cadastro-comerciante.component.html
@@ -10,11 +10,11 @@
     <div class="card-body">
       <div class="row">
         <div class="col-sm-6">
-          <input-group [(ngModel)]="comerciante.nome" label="Nome / Fantasia da Empresa"></input-group>
+          <input-group [(ngModel)]="comerciante.descricao" label="Nome / Fantasia da Empresa"></input-group>
         </div>
 
         <div class="col-sm-6">
-          <input-group [(ngModel)]="comerciante.celular" label="Telefone / WhatsApp" type="mobile-phone"></input-group>
+          <input-group [(ngModel)]="comerciante.whatsapp" label="Telefone / WhatsApp" type="mobile-phone"></input-group>
         </div>
       </div>
 
@@ -58,8 +58,8 @@
         </div>
 
         <div class="col-sm-4">
-          <input-group [(ngModel)]="comerciante.confirmacaoSenha" label="Confirmação da senha" type="password">
-          </input-group>
+          <!-- <input-group [(ngModel)]="comerciante.confirmacaoSenha" label="Confirmação da senha" type="password">
+          </input-group> -->
         </div>
       </div>
 
