--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<!-- <h4>Você está procurando por...</h4>
+<div class="row">
+  <div class="col-lg-2 col-sm-6" *ngFor="let item of tiposComercio"> -->
+    <!-- 
+       [ngClass]="{'bg-gradient-success': tipoComercioSelecionado == item.id, 'bg-gradient-info': tipoComercioSelecionado != item.id}" 
+     -->
+    <!-- <a [routerLink]="[item.id]" routerLinkActive="bg-gradient-success" (click)="tipoComercioSelecionado = item.id"
+      class="btn btn-lg btn-block bg-gradient-info">{{ item.nome }}</a>
+  </div>
+</div>
+<hr /> -->
+
+<!-- <button (click)="create()" class="btn btn-success col-sm-4">Criar vários...</button> -->
+
+<!-- <ul>
+  <li *ngFor="let bairro of bairros.bairros">
+    <a [routerLink]="['bairro', bairro]" routerLinkActive="router-link-active" >{{ bairro }}</a>
+  </li>
+</ul> -->
+
+<!-- <ul>
+  <li *ngFor="let comercio of data.items">
+    {{ comercio.descricao }}
+  </li>
+</ul> -->
+
+<router-outlet></router-outlet>
