--- a/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
+++ b/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
@@ -45,6 +45,31 @@
 
 <div class="row">
   <div class="col-lg-6 col-sm-12">
-    CEP: <strong>{{ comerciante.cep }}</strong>
+    Meios de pagamento: <strong>{{ comerciante.meio_pagamento }}</strong>
   </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Horários: <strong>{{ comerciante.dias_horarios }}</strong>
+  </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Aceita Delivery <strong>{{ comerciante.delivery? 'Sim': 'Não' }}</strong>
+  </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Instagram: <a href="{{comerciante.instagram}}" target="_blank"><strong>{{ comerciante.instagram }}</strong></a>
+  </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Facebook: <a href="{{comerciante.facebook}}" target="_blank"><strong>{{ comerciante.facebook }}</strong></a>
+  </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Site: <a href="{{comerciante.site}}" target="_blank"><strong>{{ comerciante.site }}</strong></a>
+  </div>
+
+  <div class="col-lg-6 col-sm-12">
+    Observações: <strong>{{ comerciante.obs }}</strong>
+  </div>
+  
 </div>
