--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.link-voltar {
+  position: absolute;
+  right: 10px;
+  top: 35px;
+}
+
+.link-home {
+  position: absolute;
+  right: 55px;
+  top: 35px;
+}
