--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,16 +1,15 @@
-<h1>Entrega SOS</h1>
+<app-header></app-header>
 
-<button *ngIf="!isHome" (click)="voltar()" class="btn link-voltar btn-success"><i class="fa fa-history"></i></button>
+<!-- <a *ngIf="!isHome" (click)="voltar()" class="btn link-voltar btn-success"><i class="fa fa-history"></i></a>
 
-<button *ngIf="!isHome" (click)="goToHome()" class="btn link-home btn-info"><i class="fa fa-home"></i></button>
+<a *ngIf="!isHome" (click)="goToHome()" class="btn link-home btn-info"><i class="fa fa-home"></i></a> -->
 
 <router-outlet></router-outlet>
-
-<hr/>
 
 <footer class="footer">
   <div class="versao">
     <b>Versão</b> {{ versao }}
   </div>
-  <strong>Copyright © 2020 <a href="https://http://entregasos.herokuapp.com/">Entrega SOS</a>.</strong> Todos os direitos reservados.
+  <strong>Copyright © 2020 <a href="https://http://entregasos.herokuapp.com/">@EntregaSOS</a>.</strong> Todos os
+  direitos reservados.
 </footer>
