--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,49 @@
   right: 55px;
   top: 35px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+label,
+input,
+div,
+button {
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.custom-buttons {
+  // display: block;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button-brigth {
+  @extend .custom-buttons;
+  border-top: solid 3px #F8930D;
+  background-color: #fafafa;
+  color: #000000;
+  i {
+    color: #F8930D;
+  }
+}
+
+.button-dark {
+  @extend .custom-buttons;
+  border-top: solid 3px #FF5400;
+  background: #F8930D;
+  color: #ffffff;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
