--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 .link-voltar {
   position: absolute;
@@ -56,4 +57,10 @@ button {
   color: #ffffff;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+.arrow {
+  // display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url('assets/images/arrow.svg');
+  background-repeat: no-repeat;
+}
