Alteração de texto home

--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
@@ -1,8 +1,8 @@
 <div class="home-block">
   <div class="home-text">
     <h1>Entrega SOS</h1>
-    <p>Este site tem como objetivo conectar pequenos, médios e grandes estabelecimentos aos clientes, possibilitando o
-      serviço de entrega para todo e qualquer cliente</p>
+    <p>Aqui você encontra mercados, farmácias e outros estabelecimentos que entregam as compras na sua casa, e se eles
+      não puderem entregar, a <img src="assets/images/logo-giross.svg"/> pode fazer isso por você!</p>
   </div>
 
   <div class="home-image">
