--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,7 @@ button {
   background-image: url('assets/images/arrow.svg');
   background-repeat: no-repeat;
 }
+
+.text-orange {
+  color: #F8930D;
+}
