Finalizado o novo layout

--- a/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
+++ b/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
@@ -33,7 +33,8 @@
           <div class="title-pedido-giross">Entrega realizada pela <img src="assets/images/logo-giross.svg" /></div>
 
           <div class="button-pedido-giross">
-            <a href="javascript:void(0)" class="button-dark"><i class="fab fa-whatsapp"></i> Pedido pelo whatsapp</a>
+            <a href="https://wa.me/5577999789680" target="_blank" class="button-dark"><i class="fab fa-whatsapp"></i>
+              Pedido pelo whatsapp</a>
           </div>
         </div>
 
@@ -106,17 +107,5 @@
         <a href="{{comerciante.site}}" target="_blank"><img src="assets/images/logo-site.svg" /> </a>
       </div>
     </div>
-    
-    <!-- <div class="col-lg-6 col-sm-12">
-      Instagram: <a href="{{comerciante.instagram}}" target="_blank"><strong>{{ comerciante.instagram }}</strong></a>
-    </div>
-
-    <div class="col-lg-6 col-sm-12">
-      Facebook: <a href="{{comerciante.facebook}}" target="_blank"><strong>{{ comerciante.facebook }}</strong></a>
-    </div>
-
-    <div class="col-lg-6 col-sm-12">
-      Site: <a href="{{comerciante.site}}" target="_blank"><strong>{{ comerciante.site }}</strong></a>
-    </div> -->
   </div>
 </div>
