--- a/src/app/modules/home/lista-comerciantes/lista-comerciantes.component.html
+++ b/src/app/modules/home/lista-comerciantes/lista-comerciantes.component.html
@@ -1,5 +1,5 @@
 <h2>Estabelecimentos</h2>
-<h3>> {{ bairro }}</h3>
+<h3>> {{ tipoComercio.nome }} / {{ bairro }}</h3>
 <p>Você selecionou <span class="bairro-selecionado">{{ bairro }}</span>, selecione o estabelecimento que deseja ver detalhes</p>
 
 <div class="row">
