--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="home-buttons">
-    <a [routerLink]="['bairros']" routerLinkActive="router-link-active"
+    <a [routerLink]="['tipo-comercio']" routerLinkActive="router-link-active"
       class="button-home button-consultar button-dark"><i class="fas fa-search"></i>
       Consultar
       Estabelecimentos</a>
