--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
@@ -14,7 +14,7 @@
       class="button-home button-consultar button-dark"><i class="fas fa-search"></i>
       Consultar
       Estabelecimentos</a>
-    <a [routerLink]="['comerciante/novo']" routerLinkActive="router-link-active"
+    <a routerLink="/cadastro/comerciante/novo" routerLinkActive="router-link-active"
       class="button-home button-cadastrar button-brigth"><i class="fas fa-plus-circle"></i> Cadastrar meu
       estabelecimento</a>
   </div>
