--- a/src/app/modules/plugins/header/header.component.html
+++ b/src/app/modules/plugins/header/header.component.html
@@ -4,7 +4,7 @@
 
 <div class="second-top-bar row">
   <div class="col-4">
-    <a (click)="goToHome()" class="home"><img src="assets/images/home-icon.svg" /></a>
+    <a (click)="goToHome()" class="home pointer"><img src="assets/images/home-icon.svg" /></a>
   </div>
 
   <div class="col-4">
@@ -14,6 +14,6 @@
   </div>
 
   <div class="col-4">
-    <a (click)="voltar()" class="back"><img src="assets/images/back-icon.svg" /></a>
+    <a (click)="location.back()" class="back pointer"><img src="assets/images/back-icon.svg" /></a>
   </div>
 </div>
