--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,3 +70,6 @@ button {
 }
 
 .pointer { cursor: pointer }
+.text-center { text-align: center }
+.font-2x { font-size: 2rem }
+.p-6 { padding: 6rem }
