--- a/src/app/modules/home/lista-tipo-comercio/lista-tipo-comercio.component.html
+++ b/src/app/modules/home/lista-tipo-comercio/lista-tipo-comercio.component.html
@@ -1,9 +1,15 @@
 <h2>Tipo de comércio</h2>
 <p>Selecione o tipo de comércio que você está buscando</p>
 
-<div class="row">
+<div class="row" *ngIf="!showLoad else loading">
   <div class="col-sm-12 col-lg-4" *ngFor="let tipo of tipos">
     <a class="button-bairro button-brigth" [routerLink]="['/','home','bairros', tipo.id]"
       routerLinkActive="router-link-active"><i class="fas fa-location-arrow"></i> {{ tipo.nome }}</a>
   </div>
 </div>
+
+<ng-template #loading>
+  <div class="p-6 text-center">
+    <i class="fa fa-spin fa-spinner font-2x"></i>
+  </div>
+</ng-template>
