--- a/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
+++ b/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
@@ -58,7 +58,7 @@
   <h3>Endereço</h3>
   <div class="row">
     <div class="col-lg-6 col-sm-12">
-      <strong> CEP: </strong>{{ comerciante.cep }}
+      <strong> CEP: </strong>{{ comerciante.cep | cep }}
     </div>
 
     <div class="col-lg-6 col-sm-12">
