--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
@@ -3,6 +3,8 @@
     <h1>Entrega SOS</h1>
     <p>Aqui você encontra mercados, farmácias e outros estabelecimentos que entregam as compras na sua casa, e se eles
       não puderem entregar, a <img src="assets/images/logo-giross.svg" /> pode fazer isso por você!</p>
+
+    <p>Evite sair de casa, vamos todos juntos combater o coronavírus!</p>
   </div>
 
   <div class="home-image col-lg-6">
@@ -21,6 +23,6 @@
 
   <div class="home-buttons-voluntarios col-lg-12">
     <a routerLink="voluntarios" routerLinkActive="router-link-active"
-      class="button-home button-voluntarios button-brigth"><i class="fas fa-heart"></i> Voluntários     </a>
+      class="button-home button-voluntarios button-brigth"><i class="fas fa-heart"></i> Voluntários </a>
   </div>
 </div>
