--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.scss
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.scss
@@ -5,8 +5,7 @@
     margin-top: 80px;
 
     .home-text {
-      // float: left;
-      margin-top: 170px;
+      margin-top: 150px;
 
       h1 {
         display: block;
@@ -16,6 +15,7 @@
       }
 
       p {
+        text-align: justify;
         font-weight: 500;
         font-size: 18px;
         max-width: 630px;
